--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(neptune_count_property)
 export(neptune_get_labels)
 export(neptune_list_properties)
 export(neptune_load_data)
+export(neptune_load_data_frame)
 export(neptune_parse_results_to_tables)
 export(neptune_ping)
 export(neptune_raw_json_query)
