--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,8 @@ export(neptune_count_property)
 export(neptune_get_labels)
 export(neptune_list_properties)
 export(neptune_load_data)
-export(neptune_load_data_frame)
+export(neptune_load_edges)
+export(neptune_load_vertex)
 export(neptune_parse_results_to_tables)
 export(neptune_ping)
 export(neptune_raw_json_query)
